[package]
name = "cw20-stake"
version = "1.1.1"
authors = ["Ben2x4 <Ben2x4@tutanota.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/DA0-DA0/cw-dao/contracts/cw20-stakeable"
description = "CW20 token that can be staked and staked balance can be queried at any height"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = "1.1"
cosmwasm-storage = "1.1"
cw-storage-plus = { version = "0.16" }
cw-controllers = "0.16"
cw20 = { version = "0.16" }
cw-utils = { version = "0.16" }
cw20-base = { version = "0.16", features = ["library"] }
cw2 = "0.16"
schemars = "0.8.8"
serde = { version = "1.0.132", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.30" }

[dev-dependencies]
cosmwasm-schema = "1.1"
cw-multi-test = { version = "0.16" }
anyhow = { version = "1.0.51" }
