[package]
name = "proposal-hooks-counter"
version = "1.1.0"
authors = ["Callum Anderson <callumanderson745@gmail.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/workspace-optimizer:0.12.6
"""

[dependencies]
cosmwasm-std = "1.0.0"
cosmwasm-storage = "1.0.0"
cw-storage-plus = "0.15.0"
cw2 = "0.15.0"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "1.0"
proposal-hooks = { version = "1.1.0", path = "../../packages/proposal-hooks" }
vote-hooks = { version = "1.1.0", path = "../../packages/vote-hooks" }

[dev-dependencies]
indexable-hooks = { version = "1.1.0", path = "../../packages/indexable-hooks" }
cw20 = "0.15.0"
cw20-balance-voting = { path = "../cw20-balance-voting", version = "1.1.0" }
cw20-base = "0.15.0"
cw-utils = "0.15.0"
voting = { version = "1.1.0", path = "../../packages/voting" }
cw-core = { path = "../../contracts/cw-core", version = "1.1.0", features = [
  "library",
] }
cw-proposal-single = { path = "../../contracts/cw-proposal-single" }
cosmwasm-schema = "1.0.0"
cw-multi-test = "0.15.0"
